Improve DomainMailSPFDMARC analyzer template

--- a/thehive-templates/DomainMailSPFDMARC_1_1/long.html
+++ b/thehive-templates/DomainMailSPFDMARC_1_1/long.html
@@ -1,105 +1,96 @@
 <div class="panel panel-info" ng-if="success">
-    <div class="panel-heading">
-        DomainMailSPF_DMARC information for <strong>{{artifact.data}}</strong>
+    <div class="panel-heading bg-primary text-white">
+        <h4 class="panel-title">Domain SPF & DMARC Information: <strong>{{artifact.data}}</strong></h4>
     </div>
     <div class="panel-body">
-        <div>
-            <dl class="dl-horizontal">
-                <dt class="text-bold">Domain</dt>
-                <dd>{{content.DomainMailSPFDMARC.domain}}</dd>
-            </dl>
-            <dl class="dl-horizontal">
-                <dt class="text-bold">Base domain</dt>
-                <dd>{{content.DomainMailSPFDMARC.base_domain}}</dd>
-            </dl>
-            <dl class="dl-horizontal">
-                <dt class="text-bold">dnssec</dt>
-                <dd>{{content.DomainMailSPFDMARC.dnssec}}</dd>
-            </dl>
-            <dl class="dl-horizontal" ng-if="content.DomainMailSPFDMARC.ns.hostnames.length > 0">
-                <dt class="text-bold">[NS] Hostnames</dt>
-                <dd>{{content.DomainMailSPFDMARC.ns.hostnames.join(', ') }}</dd>
-            </dl>
-            <dl class="dl-horizontal" ng-if="content.DomainMailSPFDMARC.ns.warnings.length > 0">
-                <dt class="text-bold">[NS] Warnings</dt>
-                <dd>{{content.DomainMailSPFDMARC.ns.warnings.join('\n') }}</dd>
-            </dl>
+        <div class="row">
+            <div class="col-md-6">
+                <dl class="dl-horizontal">
+                    <dt>Domain:</dt>
+                    <dd>{{content.DomainMailSPFDMARC.domain}}</dd>
+                    <dt>Base Domain:</dt>
+                    <dd>{{content.DomainMailSPFDMARC.base_domain}}</dd>
+                    <dt>DNSSEC:</dt>
+                    <dd>{{content.DomainMailSPFDMARC.dnssec}}</dd>
+                </dl>
+            </div>
+            <div class="col-md-6">
+                <dl class="dl-horizontal" ng-if="content.DomainMailSPFDMARC.ns.hostnames.length">
+                    <dt>NS Hostnames:</dt>
+                    <dd>{{content.DomainMailSPFDMARC.ns.hostnames.join(', ')}}</dd>
+                </dl>
+                <dl class="dl-horizontal" ng-if="content.DomainMailSPFDMARC.ns.warnings.length">
+                    <dt>NS Warnings:</dt>
+                    <dd><pre>{{content.DomainMailSPFDMARC.ns.warnings.join('\n')}}</pre></dd>
+                </dl>
+                <dl class="dl-horizontal" ng-if="content.DomainMailSPFDMARC.mx.hosts.length">
+                    <dt>MX Hosts:</dt>
+                    <dd>{{content.DomainMailSPFDMARC.mx.hosts.join(', ')}}</dd>
+                </dl>
+                <dl class="dl-horizontal" ng-if="content.DomainMailSPFDMARC.mx.warnings.length">
+                    <dt>MX Warnings:</dt>
+                    <dd><pre>{{content.DomainMailSPFDMARC.mx.warnings.join('\n')}}</pre></dd>
+                </dl>
+            </div>
+        </div>
 
-            <dl class="dl-horizontal" ng-if="content.DomainMailSPFDMARC.mx.hosts.length > 0">
-                <dt class="text-bold">[MX] Hosts</dt>
-                <dd>{{content.DomainMailSPFDMARC.mx.hosts.join(', ') }}</dd>
-            </dl>
-            <dl class="dl-horizontal" ng-if="content.DomainMailSPFDMARC.mx.warnings.length > 0">
-                <dt class="text-bold">[MX] Warnings</dt>
-                <dd>{{content.DomainMailSPFDMARC.mx.warnings.join('\n')}}</dd>
-            </dl>
-        </div>
-    </div>
-</div>
-<div class="panel panel-info" ng-if="success">
-    <div class="panel-heading">
-        SPF
-    </div>
-    <div class="panel-body">
-        <div>
-            <dl class="dl-horizontal">
-                <dt>Record</dt>
-                <dd>{{content.DomainMailSPFDMARC.spf.record}}</dd>
-            </dl>
-            <dl class="dl-horizontal">
-                <dt>Valid</dt>
-                <dd>{{content.DomainMailSPFDMARC.spf.valid}}</dd>
-            </dl>
-            <dl class="dl-horizontal">
-                <dt>Error</dt>
-                <dd>{{content.DomainMailSPFDMARC.spf.error}}</dd>
-            </dl>                        
-        </div>
-    </div>
-</div>
-<div class="panel panel-info" ng-if="success">
-    <div class="panel-heading">
-        DMARK
-    </div>
-    <div class="panel-body">
-        <div>
-            <h4 >Info</h4>
-            <dl class="dl-horizontal">
-                <dt>Record</dt>
-                <dd>{{content.DomainMailSPFDMARC.dmarc.record}}</dd>
-            </dl>
-            <dl class="dl-horizontal">
-                <dt>Valid</dt>
-                <dd>{{content.DomainMailSPFDMARC.dmarc.valid}}</dd>
-            </dl>
-            <dl class="dl-horizontal">
-                <dt>Error</dt>
-                <dd>{{content.DomainMailSPFDMARC.dmarc.error}}</dd>
-            </dl>              
-            <dl class="dl-horizontal">
-                <dt>Location</dt>
-                <dd>{{content.DomainMailSPFDMARC.dmarc.location}}</dd>
-            </dl>                        
-            <dl class="dl-horizontal" ng-if="content.DomainMailSPFDMARC.dmarc.warnings.length > 0">
-                <dt class="text-bold">Warnings</dt>
-                <dd>{{content.DomainMailSPFDMARC.dmarc.warnings.join('\n')}}</dd>
-            </dl>      
-            <hr>
-            <h4 >Tags</h4>
-            <dl class="dl-horizontal" ng-repeat="(tag, value) in content.DomainMailSPFDMARC.dmarc.tags">
-                <dt>{{tag}}</dt>
-                <dd>{{value.value}} <span ng-if="value.explicit">[Explicit]</span></dd>
-            </dl>
-        </div>
+        <hr>
+
+        <h4 class="text-info">SPF Record</h4>
+        <dl class="dl-horizontal">
+            <dt>Record:</dt>
+            <dd>{{content.DomainMailSPFDMARC.spf.record}}</dd>
+            <dt>Valid:</dt>
+            <dd>{{content.DomainMailSPFDMARC.spf.valid}}</dd>
+            <dt>Error:</dt>
+            <dd>{{content.DomainMailSPFDMARC.spf.error || 'None'}}</dd>
+        </dl>
+
+        <hr>
+
+        <h4 class="text-info">DMARC Record</h4>
+        <dl class="dl-horizontal">
+            <dt>Record:</dt>
+            <dd>{{content.DomainMailSPFDMARC.dmarc.record}}</dd>
+            <dt>Valid:</dt>
+            <dd>{{content.DomainMailSPFDMARC.dmarc.valid}}</dd>
+            <dt>Error:</dt>
+            <dd>{{content.DomainMailSPFDMARC.dmarc.error || 'None'}}</dd>
+            <dt>Location:</dt>
+            <dd>{{content.DomainMailSPFDMARC.dmarc.location}}</dd>
+        </dl>
+        <dl class="dl-horizontal" ng-if="content.DomainMailSPFDMARC.dmarc.warnings.length">
+            <dt>Warnings:</dt>
+            <dd><pre>{{content.DomainMailSPFDMARC.dmarc.warnings.join('\n')}}</pre></dd>
+        </dl>
+
+        <hr>
+
+        <h4 class="text-info">DMARC Tags</h4>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Tag</th>
+                    <th>Value</th>
+                    <th>Explicit</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="(tag, value) in content.DomainMailSPFDMARC.dmarc.tags">
+                    <td>{{tag}}</td>
+                    <td>{{value.value}}</td>
+                    <td>{{value.explicit ? 'Yes' : 'No'}}</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
 
-<!-- General error -->
 <div class="panel panel-danger" ng-if="!success">
     <div class="panel-heading">
         <strong>{{artifact.data | fang}}</strong>
     </div>
     <div class="panel-body">
-        {{content.errorMessage}}
+        <p>{{content.errorMessage}}</p>
     </div>
 </div>
