--- a/thehive-templates/DomainMailSPFDMARC_1_1/long.html
+++ b/thehive-templates/DomainMailSPFDMARC_1_1/long.html
@@ -11,7 +11,10 @@
                     <dt>Base Domain:</dt>
                     <dd>{{content.DomainMailSPFDMARC.base_domain}}</dd>
                     <dt>DNSSEC:</dt>
-                    <dd>{{content.DomainMailSPFDMARC.dnssec}}</dd>
+                    <dd>
+                        <span ng-if="content.DomainMailSPFDMARC.dnssec">&#10003;</span>
+                        <span ng-if="!content.DomainMailSPFDMARC.dnssec">&#10007;</span>
+                    </dd>
                 </dl>
             </div>
             <div class="col-md-6">
@@ -21,37 +24,119 @@
                 </dl>
                 <dl class="dl-horizontal" ng-if="content.DomainMailSPFDMARC.ns.warnings.length">
                     <dt>NS Warnings:</dt>
-                    <dd><pre>{{content.DomainMailSPFDMARC.ns.warnings.join('\n')}}</pre></dd>
-                </dl>
-                <dl class="dl-horizontal" ng-if="content.DomainMailSPFDMARC.mx.hosts.length">
-                    <dt>MX Hosts:</dt>
-                    <dd>{{content.DomainMailSPFDMARC.mx.hosts.join(', ')}}</dd>
-                </dl>
-                <dl class="dl-horizontal" ng-if="content.DomainMailSPFDMARC.mx.warnings.length">
-                    <dt>MX Warnings:</dt>
-                    <dd><pre>{{content.DomainMailSPFDMARC.mx.warnings.join('\n')}}</pre></dd>
+                    <dd>
+                        <pre>{{content.DomainMailSPFDMARC.ns.warnings.join('\n')}}</pre>
+                    </dd>
                 </dl>
             </div>
         </div>
+
+        <dl class="dl-horizontal" ng-if="content.DomainMailSPFDMARC.mx.hosts.length">
+            <dt>MX Hosts:</dt>
+            <dd>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Preference</th>
+                            <th>Hostname</th>
+                            <th>Addresses</th>
+                            <th>DNSSEC</th>
+                            <th>TLS</th>
+                            <th>STARTTLS</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="mx in content.DomainMailSPFDMARC.mx.hosts">
+                            <td>{{mx.preference}}</td>
+                            <td>{{mx.hostname}}</td>
+                            <td>{{mx.addresses.join(', ')}}</td>
+                            <td>
+                                <span ng-if="mx.dnssec">&#10003;</span>
+                                <span ng-if="!mx.dnssec">&#10007;</span>
+                            </td>
+                            <td>
+                                <span ng-if="mx.tls">&#10003;</span>
+                                <span ng-if="!mx.tls">&#10007;</span>
+                            </td>
+                            <td>
+                                <span ng-if="mx.starttls">&#10003;</span>
+                                <span ng-if="!mx.starttls">&#10007;</span>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </dd>
+        </dl>
+        <dl class="dl-horizontal" ng-if="content.DomainMailSPFDMARC.mx.warnings.length">
+            <dt>MX Warnings:</dt>
+            <dd>
+                <pre>{{content.DomainMailSPFDMARC.mx.warnings.join('\n')}}</pre>
+            </dd>
+        </dl>
 
         <hr>
 
         <h4 class="text-info">SPF Record</h4>
         <dl class="dl-horizontal">
             <dt>Record:</dt>
-            <dd>{{content.DomainMailSPFDMARC.spf.record}}</dd>
+            <dd><code>{{content.DomainMailSPFDMARC.spf.record}}</code></dd>
             <dt>Valid:</dt>
             <dd>{{content.DomainMailSPFDMARC.spf.valid}}</dd>
             <dt>Error:</dt>
             <dd>{{content.DomainMailSPFDMARC.spf.error || 'None'}}</dd>
+
+            <dt>DNS Lookups:</dt>
+            <dd>
+                {{content.DomainMailSPFDMARC.spf.dns_lookups}}
+                <span ng-if="content.DomainMailSPFDMARC.spf.dns_lookups > 10" class="text-danger">⚠ Too many
+                    lookups</span>
+            </dd>
+            <dt>Void Lookups:</dt>
+            <dd>{{content.DomainMailSPFDMARC.spf.dns_void_lookups}}</dd>
+
         </dl>
+
+        <div ng-if="content.DomainMailSPFDMARC.spf.parsed">
+            <h5 style="cursor: pointer;" ng-click="spfDetailsVisible = !spfDetailsVisible">
+                <span class="text-info">SPF Parsed Tree</span>
+                <span class="pull-right">
+                    <span ng-if="!spfDetailsVisible">[+]</span>
+                    <span ng-if="spfDetailsVisible">[−]</span>
+                </span>
+            </h5>
+            <div ng-show="spfDetailsVisible" style="margin-top:10px;">
+                <table class="table table-bordered table-condensed">
+                    <thead>
+                        <tr>
+                            <th>Mechanism</th>
+                            <th>Value</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="entry in content.DomainMailSPFDMARC.spf.parsed.pass">
+                            <td>pass ({{entry.mechanism}})</td>
+                            <td>{{entry.value}}</td>
+                        </tr>
+                        <tr ng-repeat="entry in content.DomainMailSPFDMARC.spf.parsed.include">
+                            <td>include</td>
+                            <td>{{entry.domain}}</td>
+                        </tr>
+                        <tr ng-if="content.DomainMailSPFDMARC.spf.parsed.all">
+                            <td>all</td>
+                            <td>{{content.DomainMailSPFDMARC.spf.parsed.all}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
 
         <hr>
 
         <h4 class="text-info">DMARC Record</h4>
         <dl class="dl-horizontal">
             <dt>Record:</dt>
-            <dd>{{content.DomainMailSPFDMARC.dmarc.record}}</dd>
+            <dd><code>{{content.DomainMailSPFDMARC.dmarc.record}}</code></dd>
             <dt>Valid:</dt>
             <dd>{{content.DomainMailSPFDMARC.dmarc.valid}}</dd>
             <dt>Error:</dt>
@@ -61,7 +146,9 @@
         </dl>
         <dl class="dl-horizontal" ng-if="content.DomainMailSPFDMARC.dmarc.warnings.length">
             <dt>Warnings:</dt>
-            <dd><pre>{{content.DomainMailSPFDMARC.dmarc.warnings.join('\n')}}</pre></dd>
+            <dd>
+                <pre>{{content.DomainMailSPFDMARC.dmarc.warnings.join('\n')}}</pre>
+            </dd>
         </dl>
 
         <hr>
@@ -78,11 +165,59 @@
             <tbody>
                 <tr ng-repeat="(tag, value) in content.DomainMailSPFDMARC.dmarc.tags">
                     <td>{{tag}}</td>
-                    <td>{{value.value}}</td>
+                    <td>
+                        <span ng-if="tag === 'p'" ng-class="{
+                        'text-success': value.value === 'reject',
+                        'text-warning': value.value === 'quarantine',
+                        'text-danger': value.value === 'none'
+                      }">{{value.value}}</span>
+                        <span ng-if="tag !== 'p'">{{value.value}}</span>
+                    </td>
                     <td>{{value.explicit ? 'Yes' : 'No'}}</td>
                 </tr>
             </tbody>
         </table>
+
+        <hr>
+
+        <h4 class="text-info">MTA-STS</h4>
+        <dl class="dl-horizontal">
+            <dt>Valid:</dt>
+            <dd>{{content.DomainMailSPFDMARC.mta_sts.valid ? 'Yes' : 'No'}}</dd>
+            <dt>Error:</dt>
+            <dd>{{content.DomainMailSPFDMARC.mta_sts.error || 'None'}}</dd>
+        </dl>
+
+        <hr>
+
+        <h4 class="text-info">SMTP TLS Reporting</h4>
+        <dl class="dl-horizontal">
+            <dt>Valid:</dt>
+            <dd>{{content.DomainMailSPFDMARC.smtp_tls_reporting.valid ? 'Yes' : 'No'}}</dd>
+            <dt>Error:</dt>
+            <dd>{{content.DomainMailSPFDMARC.smtp_tls_reporting.error || 'None'}}</dd>
+        </dl>
+
+        <hr>
+
+        <h4 class="text-info">BIMI</h4>
+        <dl class="dl-horizontal">
+            <dt>Record:</dt>
+            <dd><code>{{content.DomainMailSPFDMARC.bimi.record}}</code></dd>
+            <dt>Valid:</dt>
+            <dd>{{content.DomainMailSPFDMARC.bimi.valid ? 'Yes' : 'No'}}</dd>
+            <dt>Selector:</dt>
+            <dd>{{content.DomainMailSPFDMARC.bimi.selector}}</dd>
+            <dt>Image Error:</dt>
+            <dd>{{content.DomainMailSPFDMARC.bimi.image.error || 'None'}}</dd>
+        </dl>
+        <dl class="dl-horizontal" ng-if="content.DomainMailSPFDMARC.bimi.warnings.length">
+            <dt>Warnings:</dt>
+            <dd>
+                <pre>{{content.DomainMailSPFDMARC.bimi.warnings.join('\n')}}</pre>
+            </dd>
+        </dl>
+
     </div>
 </div>
 
