Proofpoint - fix typo

--- a/thehive-templates/Proofpoint_Lookup_1_0/long.html
+++ b/thehive-templates/Proofpoint_Lookup_1_0/long.html
@@ -7,10 +7,10 @@
         {{content.errorMessage}}
     </div>
 </div>
-<div class="report-ProofPoint" ng-if="success">
+<div class="report-Proofpoint" ng-if="success">
 	<div ng-if="content.known == true">
 		<style>
-			.report-ProofPoint dl {
+			.report-Proofpoint dl {
 				margin-bottom: 2px;
 			}
 			.smaller {
@@ -18,7 +18,7 @@
 			}
 		</style>
 		<div class="panel panel-info">
-			<div class="panel-heading"><strong>ProofPoint Report</strong></div>
+			<div class="panel-heading"><strong>Proofpoint Report</strong></div>
 				<div ng-if="content.reports && content.reports.length > 0">
 					<div class="panel-body">
 						<dl class="dl-horizontal">
@@ -89,11 +89,11 @@
 	</div>
 	<div ng-if="content.known == false">
 		<div class="panel panel-info">
-			<div class="panel-heading"><strong>ProofPoint Report</strong></div>
+			<div class="panel-heading"><strong>Proofpoint Report</strong></div>
 				<div class="panel-body">
 					<dl class="dl-horizontal">
 						<dt>Last analysis date</dt>
-						<dd>Data Unknown by ProofPoint</dd>
+						<dd>Data Unknown by Proofpoint</dd>
 					</dl>
 				</div>
 			</div>
