Fix analyzer template location & error handling

--- a/thehive-templates/isMalicious_1_0/long.html
+++ b/thehive-templates/isMalicious_1_0/long.html
@@ -143,3 +143,16 @@
     >
   </div>
 </div>
+
+<!-- General error -->
+<div class="panel panel-danger" ng-if="!success">
+  <div class="panel-heading">
+    <strong>{{(artifact.data || artifact.attachment.name) | fang}}</strong>
+  </div>
+  <div class="panel-body">
+    <dl class="dl-horizontal" ng-if="content.errorMessage">
+      <dt><i class="fa fa-warning"></i> isMalicious:</dt>
+      <dd class="wrap">{{content.errorMessage}}</dd>
+    </dl>
+  </div>
+</div>
