--- a/thehive-templates/CiscoUmbrella_Report_1_0/long.html
+++ b/thehive-templates/CiscoUmbrella_Report_1_0/long.html
@@ -1,7 +1,7 @@
 <!-- Success -->
 <div class="panel panel-info" ng-if="success && content.requests.length > 0">
     <div class="panel-heading">
-        Umbrella Report
+        Cisco Umbrella Report
     </div>
     <div class="panel-body">
         <table class="table table-hover">
@@ -27,7 +27,7 @@
 
 <div class="panel panel-info" ng-if="success && content.requests.length == 0">
     <div class="panel-heading">
-        Umbrella Report
+        Cisco Umbrella Report
     </div>
     <div class="panel-body">
         <b>No recent hits.</b>
